--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap');
 
 :root {
 	--dark: #1d1d1d;
@@ -19,7 +19,7 @@
 
 body {
 	background-color: #111;
-	font-family: 'Signika Negative', sans-serif, Arial;
+	font-family: 'Roboto', sans-serif;
 	overscroll-behavior: none;
 	margin: 0;
 	padding: 0;
