--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -39,7 +39,8 @@ body {
 	/* set a height because the contents are position: absolute, thus natively there's no height */
 	height: 4000px;
 
-	background-image: linear-gradient(rgba(255, 255, 255, 0.07) 2px, transparent 2px),
+	background-image:
+		linear-gradient(rgba(255, 255, 255, 0.07) 2px, transparent 2px),
 		linear-gradient(90deg, rgba(255, 255, 255, 0.07) 2px, transparent 2px),
 		linear-gradient(rgba(255, 255, 255, 0.06) 1px, transparent 1px),
 		linear-gradient(90deg, rgba(255, 255, 255, 0.06) 1px, transparent 1px);
