--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -162,3 +162,17 @@ button:hover {
 	color: #ffffff;
 	text-decoration: none;
 }
+#slider {
+	width:400px;
+	margin:30px auto;
+	background-color: #222;
+	display: inline-block;
+}
+
+#slider, #slider a {
+	background-image: none;
+	border: 1px solid #555;
+}
+#slider a {
+	background-color: #444;
+}
